final-project/anchor_project/message_system/build.log
   Compiling serde_derive v1.0.219
   Compiling borsh-derive v1.5.7
   Compiling borsh v1.5.7
   Compiling serde v1.0.219
   Compiling solana-hash v2.3.0
   Compiling bincode v1.3.3
   Compiling serde_bytes v0.11.17
   Compiling bv v0.11.1
   Compiling solana-short-vec v2.2.1
   Compiling solana-fee-calculator v2.2.1
   Compiling solana-serde-varint v2.2.2
   Compiling toml v0.5.11
   Compiling serde_json v1.0.143
   Compiling anchor-lang-idl-spec v0.1.0
   Compiling solana-sha256-hasher v2.3.0
   Compiling solana-keccak-hasher v2.2.1
   Compiling solana-blake3-hasher v2.2.1
   Compiling proc-macro-crate v0.1.5
   Compiling anchor-syn v0.31.1
   Compiling anchor-lang-idl v0.1.2
   Compiling borsh-derive v0.10.4
   Compiling borsh v0.10.4
   Compiling solana-pubkey v2.4.0
   Compiling solana-borsh v2.2.1
   Compiling solana-instruction v2.3.0
   Compiling solana-sdk-ids v2.2.1
   Compiling solana-nonce v2.2.1
   Compiling solana-sysvar-id v2.2.1
   Compiling solana-clock v2.2.2
   Compiling solana-rent v2.2.1
   Compiling solana-slot-hashes v2.2.1
   Compiling solana-last-restart-slot v2.2.1
   Compiling solana-slot-history v2.2.1
   Compiling solana-epoch-rewards v2.2.1
   Compiling solana-epoch-schedule v2.2.1
   Compiling solana-program-error v2.2.2
   Compiling solana-system-interface v1.0.0
   Compiling solana-serialize-utils v2.2.1
   Compiling solana-stable-layout v2.2.1
   Compiling solana-transaction-error v2.2.1
   Compiling solana-bincode v2.2.1
   Compiling solana-address-lookup-table-interface v2.2.2
   Compiling solana-loader-v2-interface v2.2.1
   Compiling solana-account-info v2.3.0
   Compiling solana-program-pack v2.2.1
   Compiling solana-cpi v2.2.1
   Compiling solana-program-entrypoint v2.3.0
   Compiling solana-account v2.2.1
   Compiling solana-instructions-sysvar v2.2.2
   Compiling solana-stake-interface v1.2.1
   Compiling solana-vote-interface v2.2.6
   Compiling solana-message v2.4.0
   Compiling solana-loader-v3-interface v5.0.0
   Compiling solana-loader-v4-interface v2.2.1
   Compiling solana-feature-gate-interface v2.2.2
   Compiling solana-sysvar v2.3.0
   Compiling solana-program v2.3.0
   Compiling anchor-attribute-account v0.31.1
   Compiling anchor-attribute-event v0.31.1
   Compiling anchor-derive-serde v0.31.1
   Compiling anchor-attribute-constant v0.31.1
   Compiling anchor-attribute-access-control v0.31.1
   Compiling anchor-derive-accounts v0.31.1
   Compiling anchor-attribute-error v0.31.1
   Compiling anchor-attribute-program v0.31.1
   Compiling anchor-lang v0.31.1
   Compiling message_system v0.1.0 (/home/giorgeabdala/dev/projects/solana/program-giorgeabdala/anchor_project/message_system/programs/message_system)
error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:55:31
   |
47 | pub struct Initialize {
   |                      - help: consider introducing lifetime `'info` here: `<'info>`
...
55 |     pub global_state: Account<'info, GlobalState>,
   |                               ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:57:27
   |
47 | pub struct Initialize {
   |                      - help: consider introducing lifetime `'info` here: `<'info>`
...
57 |     pub authority: Signer<'info>,
   |                           ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:58:33
   |
47 | pub struct Initialize {
   |                      - help: consider introducing lifetime `'info` here: `<'info>`
...
58 |     pub system_program: Program<'info, System>,
   |                                 ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:64:31
   |
62 | pub struct PostMessage {
   |                       - help: consider introducing lifetime `'info` here: `<'info>`
63 |     #[account(mut, seeds = [b"global"], bump)]
64 |     pub global_state: Account<'info, GlobalState>,
   |                               ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:73:26
   |
62 | pub struct PostMessage {
   |                       - help: consider introducing lifetime `'info` here: `<'info>`
...
73 |     pub message: Account<'info, Message>,
   |                          ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:76:24
   |
62 | pub struct PostMessage {
   |                       - help: consider introducing lifetime `'info` here: `<'info>`
...
76 |     pub author: Signer<'info>,
   |                        ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'info`
  --> programs/message_system/src/lib.rs:77:33
   |
62 | pub struct PostMessage {
   |                       - help: consider introducing lifetime `'info` here: `<'info>`
...
77 |     pub system_program: Program<'info, System>,
   |                                 ^^^^^ undeclared lifetime

warning: use of deprecated method `anchor_lang::prelude::AccountInfo::<'a>::realloc`: Use AccountInfo::resize() instead
 --> programs/message_system/src/lib.rs:5:1
  |
5 | #[program]
  | ^^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default
  = note: this warning originates in the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0261`.
warning: `message_system` (lib) generated 1 warning
error: could not compile `message_system` (lib) due to 7 previous errors; 1 warning emitted
